application yaml changed

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  profiles:
+    active: prod
   mvc:
     static-path-pattern: /**
   web:
@@ -9,16 +11,5 @@ spring:
       enabled: true
       max-file-size: 50MB
       max-request-size: 50MB
-  datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: root123
-  application:
-    name: book-shop
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
 my_token:
-  key: MySuperSecretKeyThatIsAtLeast32CharactersLong
-  expire_time: 3600000
+  expire_time: 604800000
